Did some meta analysis of feature selection results.

--- a/ML_analysis/MI_feature_selection_cls.ipynb
+++ b/ML_analysis/MI_feature_selection_cls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,6 @@
     "        .pipe(pd.get_dummies, columns=cat_cols)\n",
     "        .sort_values(\"figo_stage\")\n",
     "        .reset_index(drop=True)\n",
-    "#         .assign(figo_stage_int=lambda x: pd.factorize(x[\"figo_stage\"])[0] + 1)\n",
     "        .assign(figo_stage_major = lambda x: x[\"figo_stage\"].apply(lambda s: re.findall(r\"IV|III|II|I\", s)[0]))\n",
     "        .assign(figo_stage_major_fact = lambda x: pd.factorize(x[\"figo_stage_major\"])[0] + 1)\n",
     "        .pipe(prep.cols_to_front, [\"sample_name\", \"figo_stage_major\", \"figo_stage_major_fact\"])\n",
@@ -605,92 +604,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>geneID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PGF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>TIMP4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>C1QTNF6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>TNC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>PRL</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    geneID\n",
-       "0      PGF\n",
-       "1    TIMP4\n",
-       "2  C1QTNF6\n",
-       "3      TNC\n",
-       "4      PRL"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mi_df = pd.DataFrame({\"geneID\": joined_df.columns[12:]})\n",
-    "mi_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.385230999992928\n"
+      "43.48636989999795\n"
      ]
     }
    ],
    "source": [
-    "sim_rounds = 21\n",
+    "sim_rounds = 101\n",
     "start = perf_counter()\n",
     "mi_delayed = [delayed(mutual_info_classif)(X[:, 11:], y, discrete_features=False) for _ in range(sim_rounds)]\n",
     "res = compute(*mi_delayed, scheduler=\"processes\")\n",
@@ -700,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -735,15 +661,15 @@
        "      <th>MI_est_8</th>\n",
        "      <th>MI_est_9</th>\n",
        "      <th>...</th>\n",
-       "      <th>MI_est_13</th>\n",
-       "      <th>MI_est_14</th>\n",
-       "      <th>MI_est_15</th>\n",
-       "      <th>MI_est_16</th>\n",
-       "      <th>MI_est_17</th>\n",
-       "      <th>MI_est_18</th>\n",
-       "      <th>MI_est_19</th>\n",
-       "      <th>MI_est_20</th>\n",
-       "      <th>MI_est_21</th>\n",
+       "      <th>MI_est_93</th>\n",
+       "      <th>MI_est_94</th>\n",
+       "      <th>MI_est_95</th>\n",
+       "      <th>MI_est_96</th>\n",
+       "      <th>MI_est_97</th>\n",
+       "      <th>MI_est_98</th>\n",
+       "      <th>MI_est_99</th>\n",
+       "      <th>MI_est_100</th>\n",
+       "      <th>MI_est_101</th>\n",
        "      <th>MI_est_median</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -852,13 +778,13 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.003727</td>\n",
+       "      <td>0.000489</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.018703</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.029682</td>\n",
-       "      <td>0.010991</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -870,7 +796,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 103 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -879,21 +805,21 @@
        "1    TIMP4  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
        "2  C1QTNF6  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
        "3      TNC  0.023202  0.023202  0.023202  0.023202  0.023202  0.023202   \n",
-       "4      PRL  0.000000  0.000000  0.000000  0.000000  0.000000  0.003727   \n",
+       "4      PRL  0.000000  0.000000  0.000000  0.000000  0.000000  0.000489   \n",
        "\n",
-       "   MI_est_7  MI_est_8  MI_est_9  ...  MI_est_13  MI_est_14  MI_est_15  \\\n",
+       "   MI_est_7  MI_est_8  MI_est_9  ...  MI_est_93  MI_est_94  MI_est_95  \\\n",
        "0  0.083027  0.083027  0.083027  ...   0.083027   0.083027   0.083027   \n",
        "1  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
        "2  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
        "3  0.023202  0.023202  0.023202  ...   0.023202   0.023202   0.023202   \n",
-       "4  0.000000  0.000000  0.000000  ...   0.029682   0.010991   0.000000   \n",
+       "4  0.000000  0.000000  0.018703  ...   0.000000   0.000000   0.000000   \n",
        "\n",
-       "   MI_est_16  MI_est_17  MI_est_18  MI_est_19  MI_est_20  MI_est_21  \\\n",
-       "0   0.083027   0.083027   0.083027   0.083027   0.083027   0.083027   \n",
-       "1   0.000000   0.000000   0.000000   0.000000   0.000000   0.000000   \n",
-       "2   0.000000   0.000000   0.000000   0.000000   0.000000   0.000000   \n",
-       "3   0.023202   0.023202   0.023202   0.023202   0.023202   0.023202   \n",
-       "4   0.000000   0.000000   0.000000   0.000000   0.000000   0.000000   \n",
+       "   MI_est_96  MI_est_97  MI_est_98  MI_est_99  MI_est_100  MI_est_101  \\\n",
+       "0   0.083027   0.083027   0.083027   0.083027    0.083027    0.083027   \n",
+       "1   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
+       "2   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
+       "3   0.023202   0.023202   0.023202   0.023202    0.023202    0.023202   \n",
+       "4   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
        "\n",
        "   MI_est_median  \n",
        "0       0.083027  \n",
@@ -902,16 +828,15 @@
        "3       0.023202  \n",
        "4       0.000000  \n",
        "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res_df = pd.DataFrame(np.column_stack(res), columns=[f\"MI_est_{i + 1}\" for i in range(sim_rounds)])\n",
     "mi_df = pd.concat([\n",
     "    pd.DataFrame({\"geneID\": joined_df.columns[12:]}),\n",
     "    pd.DataFrame(np.column_stack(res), columns=[f\"MI_est_{i + 1}\" for i in range(sim_rounds)])\n",
@@ -922,110 +847,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(483, 2)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "489"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dep_mi_df = (\n",
-    "    mi_df[[\"geneID\", \"MI_est_median\"]]\n",
-    "        .query(\"MI_est_median > 0\")\n",
-    "        .reset_index(drop=True)\n",
-    ")\n",
-    "print(dep_mi_df.shape)"
+    "sum(mi_df.MI_est_median > 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coxph_df = pd.read_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_coxph_results.tsv\", sep='\\t')\n",
-    "sig_coxph_df = coxph_df[coxph_df.gene_pval < 0.05]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "56"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sig_coxph_genes = set(sig_coxph_df.geneID)\n",
-    "mi_genes = set(dep_mi_df.geneID)\n",
-    "len(mi_genes.intersection(sig_coxph_genes))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sig_deg_matrisome_df = (\n",
-    "    pd.read_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_sig_DESeq_results_xref_matrisome.tsv\", sep='\\t')\n",
-    "        .query(\"in_matrisome == True\")\n",
-    "        .reset_index(drop=True)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "268"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sig_deg_genes = set(sig_deg_matrisome_df.geneID)\n",
-    "len(mi_genes.intersection(sig_deg_genes))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "38"
-      ]
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(mi_genes.intersection(sig_coxph_genes).intersection(sig_deg_genes))"
+    "mi_df[[\"geneID\", \"MI_est_median\"]].to_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_MI_figo_results.tsv\", sep=\"\\t\", index=False)"
    ]
   }
  ],
