--- a/ML_analysis/MI_feature_selection_reg.ipynb
+++ b/ML_analysis/MI_feature_selection_reg.ipynb
@@ -9,6 +9,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.feature_selection import mutual_info_regression, mutual_info_classif\n",
+    "from dask import compute, delayed\n",
+    "from time import perf_counter\n",
     "\n",
     "import utils.dev_config as dev_conf\n",
     "import utils.preprocessing as prep"
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +253,7 @@
        "4                       0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,32 +342,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(495, 2)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21.787716299993917\n"
+     ]
     }
    ],
    "source": [
-    "# only include genes, since MI scores are independent, first gene col starts at idx 10\n",
-    "mi_res = mutual_info_regression(X[:, 10:], y, discrete_features=False)\n",
-    "mi_df = pd.DataFrame({\"geneID\": joined_df.columns[11:], \"MI\": mi_res})\n",
-    "mi_df = mi_df.sort_values(\"MI\", ascending=False).reset_index(drop=True)\n",
-    "dep_mi_df = mi_df[mi_df.MI > 0]\n",
-    "dep_mi_df.shape"
+    "sim_rounds = 101\n",
+    "start = perf_counter()\n",
+    "mi_delayed = [delayed(mutual_info_regression)(X[:, 10:], y, discrete_features=False) for _ in range(sim_rounds)]\n",
+    "res = compute(*mi_delayed, scheduler=\"processes\")\n",
+    "stop = perf_counter()\n",
+    "print(stop - start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -390,130 +389,227 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>geneID</th>\n",
-       "      <th>MI</th>\n",
+       "      <th>MI_est_1</th>\n",
+       "      <th>MI_est_2</th>\n",
+       "      <th>MI_est_3</th>\n",
+       "      <th>MI_est_4</th>\n",
+       "      <th>MI_est_5</th>\n",
+       "      <th>MI_est_6</th>\n",
+       "      <th>MI_est_7</th>\n",
+       "      <th>MI_est_8</th>\n",
+       "      <th>MI_est_9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>MI_est_93</th>\n",
+       "      <th>MI_est_94</th>\n",
+       "      <th>MI_est_95</th>\n",
+       "      <th>MI_est_96</th>\n",
+       "      <th>MI_est_97</th>\n",
+       "      <th>MI_est_98</th>\n",
+       "      <th>MI_est_99</th>\n",
+       "      <th>MI_est_100</th>\n",
+       "      <th>MI_est_101</th>\n",
+       "      <th>MI_est_median</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>LGALS9B</td>\n",
-       "      <td>0.334239</td>\n",
+       "      <td>PGF</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
+       "      <td>0.071563</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>CRELD2</td>\n",
-       "      <td>0.271653</td>\n",
+       "      <td>TIMP4</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>VWA3B</td>\n",
-       "      <td>0.268147</td>\n",
+       "      <td>C1QTNF6</td>\n",
+       "      <td>0.122624</td>\n",
+       "      <td>0.123849</td>\n",
+       "      <td>0.126865</td>\n",
+       "      <td>0.123849</td>\n",
+       "      <td>0.128090</td>\n",
+       "      <td>0.123849</td>\n",
+       "      <td>0.128090</td>\n",
+       "      <td>0.123849</td>\n",
+       "      <td>0.123849</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.122624</td>\n",
+       "      <td>0.122624</td>\n",
+       "      <td>0.122624</td>\n",
+       "      <td>0.123849</td>\n",
+       "      <td>0.123849</td>\n",
+       "      <td>0.126865</td>\n",
+       "      <td>0.128090</td>\n",
+       "      <td>0.128090</td>\n",
+       "      <td>0.126865</td>\n",
+       "      <td>0.126865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>MUC21</td>\n",
-       "      <td>0.265444</td>\n",
+       "      <td>TNC</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ADAM12</td>\n",
-       "      <td>0.265249</td>\n",
+       "      <td>PRL</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 103 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    geneID        MI\n",
-       "0  LGALS9B  0.334239\n",
-       "1   CRELD2  0.271653\n",
-       "2    VWA3B  0.268147\n",
-       "3    MUC21  0.265444\n",
-       "4   ADAM12  0.265249"
+       "    geneID  MI_est_1  MI_est_2  MI_est_3  MI_est_4  MI_est_5  MI_est_6  \\\n",
+       "0      PGF  0.071563  0.071563  0.071563  0.071563  0.071563  0.071563   \n",
+       "1    TIMP4  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
+       "2  C1QTNF6  0.122624  0.123849  0.126865  0.123849  0.128090  0.123849   \n",
+       "3      TNC  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
+       "4      PRL  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
+       "\n",
+       "   MI_est_7  MI_est_8  MI_est_9  ...  MI_est_93  MI_est_94  MI_est_95  \\\n",
+       "0  0.071563  0.071563  0.071563  ...   0.071563   0.071563   0.071563   \n",
+       "1  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
+       "2  0.128090  0.123849  0.123849  ...   0.122624   0.122624   0.122624   \n",
+       "3  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
+       "4  0.000000  0.000000  0.000000  ...   0.000000   0.000000   0.000000   \n",
+       "\n",
+       "   MI_est_96  MI_est_97  MI_est_98  MI_est_99  MI_est_100  MI_est_101  \\\n",
+       "0   0.071563   0.071563   0.071563   0.071563    0.071563    0.071563   \n",
+       "1   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
+       "2   0.123849   0.123849   0.126865   0.128090    0.128090    0.126865   \n",
+       "3   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
+       "4   0.000000   0.000000   0.000000   0.000000    0.000000    0.000000   \n",
+       "\n",
+       "   MI_est_median  \n",
+       "0       0.071563  \n",
+       "1       0.000000  \n",
+       "2       0.126865  \n",
+       "3       0.000000  \n",
+       "4       0.000000  \n",
+       "\n",
+       "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dep_mi_df.head()"
+    "mi_df = pd.concat([\n",
+    "    pd.DataFrame({\"geneID\": joined_df.columns[11:]}),\n",
+    "    pd.DataFrame(np.column_stack(res), columns=[f\"MI_est_{i + 1}\" for i in range(sim_rounds)])\n",
+    "], axis=1)\n",
+    "mi_df[\"MI_est_median\"] = mi_df.iloc[:, 1:].median(axis=1)\n",
+    "mi_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coxph_df = pd.read_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_coxph_results.tsv\", sep='\\t')\n",
-    "sig_coxph_df = coxph_df[coxph_df.gene_pval < 0.05]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sig_coxph_genes = set(sig_coxph_df.geneID)\n",
-    "mi_genes = set(dep_mi_df.geneID)\n",
-    "len(mi_genes.intersection(sig_coxph_genes))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sig_deg_matrisome_df = (\n",
-    "    pd.read_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_sig_DESeq_results_xref_matrisome.tsv\", sep='\\t')\n",
-    "        .query(\"in_matrisome == True\")\n",
-    "        .reset_index(drop=True)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "263"
+       "493"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sig_deg_genes = set(sig_deg_matrisome_df.geneID)\n",
-    "len(mi_genes.intersection(sig_deg_genes))"
+    "sum(mi_df.MI_est_median > 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "33"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(mi_genes.intersection(sig_coxph_genes).intersection(sig_deg_genes))"
+    "mi_df[[\"geneID\", \"MI_est_median\"]].to_csv(f\"{dirs.analysis_dir}/{unified_dsets[i]}_MI_survival_results.tsv\", sep=\"\\t\", index=False)"
    ]
   }
  ],
