Added notebook for preparing data for TCGA exploratory analysis.

--- a/exploratory_analysis/TCGA_vis.ipynb
+++ b/exploratory_analysis/TCGA_vis.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -404,19 +409,6 @@
     }
    ],
    "source": [
-    "# # filter genes which are never expressed in any sample\n",
-    "# unexpressed_mask <- !(rowSums(counts_df[, -c(1:2)] > 0) == 0)\n",
-    "# expressed_counts_df <- counts_df[unexpressed_mask, ]\n",
-    "# nrow(expressed_counts_df)\n",
-    "\n",
-    "# # Drop genes whose expressions are at or below the median in 75% of samples\n",
-    "# expr_med <- median(as.matrix(expressed_counts_df[, -c(1:2)]))\n",
-    "# lowly_expressed_mask <- !(rowSums(expressed_counts_df[, -c(1:2)] <= expr_med) > (.75 * nrow(coldata_df)))\n",
-    "# prefiltered_counts_df <- expressed_counts_df[lowly_expressed_mask, ]\n",
-    "\n",
-    "# # Remaining genes\n",
-    "# nrow(prefiltered_counts_df)\n",
-    "\n",
     "# Keep genes which are expressed in > 1/3 of samples\n",
     "expression_mask <- rowSums(counts_df[, -c(1:2)] > 0) > (1 / 3 * nrow(coldata_df))\n",
     "prefiltered_counts_df <- counts_df[expression_mask, ]\n",
