Update prep to only include matrisome data.

--- a/preprocessing/TCGA_exploratory_data_prep.ipynb
+++ b/preprocessing/TCGA_exploratory_data_prep.ipynb
@@ -253,12 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -290,12 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -405,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -437,9 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Filter and normalize\n",
-    "\n",
-    "Experiment with whether to filter or normalize first"
+    "# Filter and normalize"
    ]
   },
   {
@@ -451,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -505,22 +493,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Normalize and filter to matrisome genes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "converting counts to integer mode\n"
+     ]
+    }
+   ],
    "source": [
     "norm_gyn_counts <- varianceStabilizingTransformation(as.matrix(prefiltered_gyn_counts_df[, -c(1:2)]), blind = TRUE)\n",
     "prefiltered_norm_gyn_counts_df <- norm_gyn_counts %>%\n",
     "    as_tibble() %>%\n",
     "    dplyr::mutate(ensembl_gene_id = prefiltered_gyn_counts_df$ensembl_gene_id,\n",
     "                  external_gene_name = prefiltered_gyn_counts_df$external_gene_name) %>%\n",
-    "    dplyr::select(ensembl_gene_id, external_gene_name, everything())"
+    "    dplyr::select(ensembl_gene_id, external_gene_name, everything()) %>%\n",
+    "    dplyr::filter(external_gene_name %in% matrisome_df$gene_symbol)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -537,12 +541,13 @@
     "    as_tibble() %>%\n",
     "    dplyr::mutate(ensembl_gene_id = prefiltered_pan_counts_df$ensembl_gene_id,\n",
     "                  external_gene_name = prefiltered_pan_counts_df$external_gene_name) %>%\n",
-    "    dplyr::select(ensembl_gene_id, external_gene_name, everything())"
+    "    dplyr::select(ensembl_gene_id, external_gene_name, everything()) %>%\n",
+    "    dplyr::filter(external_gene_name %in% matrisome_df$gene_symbol)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,33 +558,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "write_tsv(\n",
     "    prefiltered_norm_gyn_counts_df,\n",
-    "    paste0(dirs$data_dir, \"/TCGA_RNA_combined_matrix_count_data/prefiltered_norm_gyn_counts.tsv\")\n",
+    "    paste0(dirs$data_dir, \"/TCGA_RNA_combined_matrix_count_data/prefiltered_norm_matrisome_gyn_counts.tsv\")\n",
     ")\n",
     "write_tsv(\n",
     "    gyn_coldata_df,\n",
-    "    paste0(dirs$data_dir, \"/TCGA_RNA_combined_matrix_count_data/gyn_coldata.tsv\")\n",
+    "    paste0(dirs$data_dir, \"/TCGA_RNA_combined_matrix_count_data/matrisome_gyn_coldata.tsv\")\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "write_tsv(\n",
     "    prefiltered_norm_pan_counts_df,\n",
-    "    paste0(dirs$data_dir, \"/TCGA_RNA_combined_matrix_count_data/prefiltered_norm_pan_counts.tsv\")\n",
+    "    paste0(dirs$data_dir, \"/TCGA_RNA_combined_matrix_count_data/prefiltered_norm_matrisome_pan_counts.tsv\")\n",
     ")\n",
     "write_tsv(\n",
     "    pan_coldata_df,\n",
-    "    paste0(dirs$data_dir, \"/TCGA_RNA_combined_matrix_count_data/pan_coldata.tsv\")\n",
+    "    paste0(dirs$data_dir, \"/TCGA_RNA_combined_matrix_count_data/matrisome_pan_coldata.tsv\")\n",
     ")"
    ]
   }
