Heatmap and umap visualizations for multiple cancers mixed together.

--- a/preprocessing/TCGA_exploratory_data_prep.ipynb
+++ b/preprocessing/TCGA_exploratory_data_prep.ipynb
@@ -148,7 +148,7 @@
    "source": [
     "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
     "gyn_projects <- c(\"TCGA-CESC\", \"TCGA-UCS\", \"TCGA-UCEC\", \"TCGA-OV\")\n",
-    "nongyn_projects <- c(\"TCGA-BRCA\")"
+    "nongyn_projects <- c(\"TCGA-BRCA\", \"TCGA-COAD\", \"TCGA-LGG\")"
    ]
   },
   {
@@ -164,7 +164,7 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-CESC_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCS_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_counts.tsv'</li></ol>\n"
+       "<ol class=list-inline><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-CESC_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCS_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_counts.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_counts.tsv'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
@@ -173,6 +173,8 @@
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-UCEC\\_counts.tsv'\n",
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-OV\\_counts.tsv'\n",
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-BRCA\\_counts.tsv'\n",
+       "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-COAD\\_counts.tsv'\n",
+       "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-LGG\\_counts.tsv'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
@@ -181,6 +183,8 @@
        "3. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_counts.tsv'\n",
        "4. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_counts.tsv'\n",
        "5. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_counts.tsv'\n",
+       "6. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_counts.tsv'\n",
+       "7. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_counts.tsv'\n",
        "\n",
        "\n"
       ],
@@ -189,7 +193,9 @@
        "[2] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCS_counts.tsv\" \n",
        "[3] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_counts.tsv\"\n",
        "[4] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_counts.tsv\"  \n",
-       "[5] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_counts.tsv\""
+       "[5] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_counts.tsv\"\n",
+       "[6] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_counts.tsv\"\n",
+       "[7] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_counts.tsv\" "
       ]
      },
      "metadata": {},
@@ -203,7 +209,7 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-CESC_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCS_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_coldata.tsv'</li></ol>\n"
+       "<ol class=list-inline><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-CESC_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCS_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_coldata.tsv'</li><li>'/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_coldata.tsv'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
@@ -212,6 +218,8 @@
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-UCEC\\_coldata.tsv'\n",
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-OV\\_coldata.tsv'\n",
        "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-BRCA\\_coldata.tsv'\n",
+       "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-COAD\\_coldata.tsv'\n",
+       "\\item '/mnt/d/fogg\\_lab\\_gyn\\_cancer\\_data/TCGA\\_RNA\\_matrix\\_count\\_data/TCGA-LGG\\_coldata.tsv'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
@@ -220,6 +228,8 @@
        "3. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_coldata.tsv'\n",
        "4. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_coldata.tsv'\n",
        "5. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_coldata.tsv'\n",
+       "6. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_coldata.tsv'\n",
+       "7. '/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_coldata.tsv'\n",
        "\n",
        "\n"
       ],
@@ -228,7 +238,9 @@
        "[2] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCS_coldata.tsv\" \n",
        "[3] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-UCEC_coldata.tsv\"\n",
        "[4] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-OV_coldata.tsv\"  \n",
-       "[5] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_coldata.tsv\""
+       "[5] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-BRCA_coldata.tsv\"\n",
+       "[6] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-COAD_coldata.tsv\"\n",
+       "[7] \"/mnt/d/fogg_lab_gyn_cancer_data/TCGA_RNA_matrix_count_data/TCGA-LGG_coldata.tsv\" "
       ]
      },
      "metadata": {},
@@ -285,7 +297,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -326,6 +343,32 @@
       "  external_gene_name = col_character()\n",
       ")\n",
       "See spec(...) for full column specifications.\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  .default = col_double(),\n",
+      "  ensembl_gene_id = col_character(),\n",
+      "  external_gene_name = col_character()\n",
+      ")\n",
+      "See spec(...) for full column specifications.\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  .default = col_double(),\n",
+      "  ensembl_gene_id = col_character(),\n",
+      "  external_gene_name = col_character()\n",
+      ")\n",
+      "See spec(...) for full column specifications.\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  sample_name = col_character(),\n",
+      "  condition = col_character(),\n",
+      "  project = col_character()\n",
+      ")\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  sample_name = col_character(),\n",
+      "  condition = col_character(),\n",
+      "  project = col_character()\n",
+      ")\n",
       "Parsed with column specification:\n",
       "cols(\n",
       "  sample_name = col_character(),\n",
@@ -445,16 +488,16 @@
     {
      "data": {
       "text/html": [
-       "34617"
+       "34478"
       ],
       "text/latex": [
-       "34617"
+       "34478"
       ],
       "text/markdown": [
-       "34617"
+       "34478"
       ],
       "text/plain": [
-       "[1] 34617"
+       "[1] 34478"
       ]
      },
      "metadata": {},
